# org

./: *scratch*  Obituary_Sermon.org  abid_khan_letter_Hazoor.docx  ak_pa_speech.docx  ak_pa_speech.odt  ak_pa_speech.org  build-site.el  build.sh  gtd.org  index.org  index.tex  ishat.org  jamaat.doc  jamaat.docx  jamaat.html  jamaat.odt  jamaat.org  jamaat.tex  jamaat.txt  letters_to_huzoor.odt  letters_to_huzoor.org  linux_software.org  okr.org  remember.org  sitemap.org  tajneed.docx  tasks.org  tex_tikz_example.org  tex_tikz_example.tex
.github/workflows/: publish.yml
ai_org/: bayesian_learning.html  bayesian_learning.org  bayesian_learning.tex  cost_functions.org  debug.org  helloworld.py  index.org  models.org  optimization_functions.org
designflow/: CMakeLists.txt  designflow.org  uvm.org
designflow/python_cpp_example/: CMakeLists.txt  python_cpp_example.org  setup.py
designflow/python_cpp_example/python_cpp_example.egg-info/: PKG-INFO  SOURCES.txt
designflow/python_cpp_example/tests/: math_test.py  test_math.cpp
khutba/: 041618.org
roam/: p-building_my_second_brain.org  p-embedded_programming_with_rust_and_microbit.org  p-find_musical_workflow.org  r-ahrens_sonke_how_to_take_smart_notes_one_simple_technique_to_boost_writing_learning_and_thinking.org  r-bradberry_travis_emotional_intelligence_2_0.org  r-clash_tutorial.org  r-clash_tutorial_pdf.org  r-clear_james_atomic_habits_tiny_changes_remarkable_results_an_easy_proven_way_to_build_good_habits_break_bad_ones.org  r-forte_tiago_building_a_second_brain.org  r-kurt_will_get_programming_with_haskell.org  (+3 more)
(+55 files in other folders)
